<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_header">

        <CheckBoxPreference android:key="add_extra_blockers"
            android:title="@string/add_extra_blockers"
            android:summary="@string/add_extra_blockers_summary" />
        <EditTextPreference android:defaultValue="10"
            android:key="blocker_percentage"
            android:title="% blocked"
            android:summary="Percentage of the board occupied by additional blockers"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:dependency="add_extra_blockers"/>

        <CheckBoxPreference android:key="display_visited_cells"
            android:title="@string/display_visited_cells"
            android:summary="@string/display_visited_cells_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">

        <Preference android:title="@string/app_about_title" android:summary="@string/app_about_info" />

    </PreferenceCategory>

</PreferenceScreen>
